--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.1.1",
     "react-image-gallery": "^1.2.7",
     "react-redux": "^7.2.5",
